--- a/complete_requirements.yml
+++ b/complete_requirements.yml
@@ -5,8 +5,8 @@
             name: gdown
 
   - name: "Getting JDK software"
-    command: "cd requirements/softwares/ && gdown --id 1ilqY9Yj-doBCO4jktWD2rOuYpKHLIti5"
+    shell: "cd requirements/softwares/ && gdown --id 1ilqY9Yj-doBCO4jktWD2rOuYpKHLIti5"
 
   - name: "Getting Hadoop software"
-    command: "cd requirements/softwares/ && gdown --id 1LkQ5J_EnfC1P0jelIvkmslraHhwKnN_m"
+    shell: "cd requirements/softwares/ && gdown --id 1LkQ5J_EnfC1P0jelIvkmslraHhwKnN_m"
 
