--- a/namenode.yml
+++ b/namenode.yml
@@ -10,22 +10,22 @@
   - name: "Copying JDK software"
     copy:
             src: "requirements/softwares/jdk-8u171-linux-x64.rpm"
-            dest: "/root/jdk.rpm"
+            dest: "/root/"
 
   - name: "Copying hadoop software"
     copy:
             src: "requirements/softwares/hadoop-1.2.1-1.x86_64.rpm"
-            dest: "/root/hadoop.rpm"
+            dest: "/root/"
   
   - name: "Installing jdk software"
     yum:
-            name: "/root/jdk.rpm"
+            name: "/root/jdk-8u171-linux-x64.rpm"
             state: present
             disable_gpg_check: yes
   
   - name: "Installing Hadoop software"
     command:
-            cmd: "rpm -ivh hadoop.rpm --force"
+            cmd: "rpm -ivh hadoop-1.2.1-1.x86_64.rpm --force"
 
   - name: "Create directory for namenode"
     file:
